--- a/ansible/roles/candlepin-user/tasks/main.yml
+++ b/ansible/roles/candlepin-user/tasks/main.yml
@@ -88,6 +88,11 @@
     version: "{{caracalla_branch}}"
   when: "{{candlepin_git_pull}}"
 
+
+- name: Write test properties to properties file
+  lineinfile: line={{item}} dest="{{candlepin_user_home}}/candlepin-throughput.prop"
+  with_items: "{{jmeter_test_properties}}"
+
 - name: Run jmeter test
   command: /opt/apache-jmeter-3.0/bin/jmeter -n -t candlepin-throughput.jmx -p "{{candlepin_user_home}}/candlepin-throughput.prop"
   args:
