Run more than one performance tests

--- a/ansible/roles/candlepin-user/tasks/main.yml
+++ b/ansible/roles/candlepin-user/tasks/main.yml
@@ -110,27 +110,33 @@
     timeout: 360
 
 - name: Write test properties to properties file
-  lineinfile: line={{item}} dest="{{candlepin_user_home}}/candlepin-throughput.prop"
-  with_items: "{{jmeter_test_properties}}"
+  lineinfile: line={{item}} dest="{{candlepin_user_home}}/candlepin-throughput/candlepin-throughput.prop"
+  with_items: "{{candlepin_throughput_properties}}"
 
 - name: Remove results file if present
   file:
-    path: "{{caracalla_checkout}}/candlepin-throughput/results.jtl"
+    path: "{{caracalla_checkout}}/{{item.value.result_file}}"
     state: absent
+  with_dict: "{{jmeter_test_details}}"
+  when: "item.key in jmeter_tests"
   tags:
     - jmeter-step
 
 - name: Remove parsed results file if present
   file:
-    path: "{{caracalla_checkout}}/parsed-results.txt"
+    path: "{{caracalla_checkout}}/parsed-{{item.value.result_file}}"
     state: absent
+  with_dict: "{{jmeter_test_details}}"
+  when: "item.key in jmeter_tests"
   tags:
     - jmeter-step
 
 - name: Run jmeter test
-  command: /opt/apache-jmeter-3.0/bin/jmeter -n -t candlepin-throughput.jmx -p "{{candlepin_user_home}}/candlepin-throughput.prop"
+  command: /opt/apache-jmeter-3.0/bin/jmeter -n -t "{{caracalla_checkout}}"/{{item.value.test_name}} -p "{{item.value.property_file}}"
+  with_dict: "{{jmeter_test_details}}"
+  when: "item.key in jmeter_tests"
   args:
-    chdir: "{{caracalla_checkout}}/candlepin-throughput"
+    chdir: "{{caracalla_checkout}}"
   tags:
     - jmeter-step
     - skip_ansible_lint
@@ -143,38 +149,50 @@
 #  tags:
 #    - jmeter-step
 
-- name: Fetch results file
-  fetch:
-    src: "{{caracalla_checkout}}/candlepin-throughput/results.jtl"
-    dest: "results.jtl"
-    flat: yes
-  tags:
-    - jmeter-step
-
 - name: Parse result
-  command: "./parse-jtl.py --pretty-print candlepin-throughput/results.jtl -o parsed-results.txt"
+  command: "./parse-jtl.py --pretty-print {{item.value.result_file}} -o parsed-{{item.value.result_file}}"
   args:
     chdir: "{{caracalla_checkout}}"
-    creates: "{{caracalla_checkout}}/parsed-results.txt"
+    creates: "{{caracalla_checkout}}/parsed-{{item.value.result_file}}"
+  with_dict: "{{jmeter_test_details}}"
+  when: "item.key in jmeter_tests"
   tags:
     - jmeter-step
 
-- name: Fetch parsed results file
+- name: Delete existing artifacts folder from workspace
+  local_action: file  dest="artifacts/" state=absent
+
+- name: Create artifacts folder
+  local_action: file  dest="artifacts/" state=directory
+
+- name: Fetch results files
   fetch:
-    src: "{{caracalla_checkout}}/parsed-results.txt"
-    dest: "parsed-results.txt"
+    src: "{{caracalla_checkout}}/{{item.value.result_file}}"
+    dest: "artifacts/{{item.value.result_file}}"
     flat: yes
+  with_dict: "{{jmeter_test_details}}"
+  when: "item.key in jmeter_tests"
+  tags:
+    - jmeter-step
+
+- name: Fetch parsed results files
+  fetch:
+    src: "{{caracalla_checkout}}/parsed-{{item.value.result_file}}"
+    dest: "artifacts/parsed-{{item.value.result_file}}"
+    flat: yes
+  with_dict: "{{jmeter_test_details}}"
+  when: "item.key in jmeter_tests"
   tags:
     - jmeter-step
 
 - name: Fetch candlepin.log
   fetch:
     src: "/var/log/candlepin/candlepin.log"
-    dest: "candlepin.log"
+    dest: "artifacts/candlepin.log"
     flat: yes
 
 - name: Fetch access.log
   fetch:
     src: "/var/log/candlepin/access.log"
-    dest: "access.log"
+    dest: "artifacts/access.log"
     flat: yes
