--- a/ansible/roles/candlepin-user/tasks/main.yml
+++ b/ansible/roles/candlepin-user/tasks/main.yml
@@ -47,6 +47,14 @@
 #   - candlepin-user
 #   - candlepin-deploy
 
+- name: Update mysql vm post reset
+  shell: mysql -h {{mysql_vm_hostname}} -u candlepin candlepin < {{caracalla_checkout}}/ansible/resources/import.sql
+
+- name: Copy the custom.yaml
+  copy:
+    src: "resources/custom.yaml"
+    dest: "{{candlepin_checkout}}/server/custom.yaml"
+
 - name: Deploy the candlepin server
   command: "./server/bin/deploy {{candlepin_deploy_args}}"
   args:
@@ -67,9 +75,6 @@
     backup: yes
   become: true
 
-- name: Update mysql vm post reset
-  shell: mysql -h {{mysql_vm_hostname}} -u candlepin candlepin < {{caracalla_checkout}}/ansible/resources/import.sql
-
 - name: Clear liquibase checksum
   shell: "liquibase --driver=com.mysql.jdbc.Driver --classpath=server/src/main/resources:server/target/classes/:/usr/share/java/mysql-connector-java.jar --changeLogFile=db/changelog/changelog-update.xml --url=\"jdbc:mysql://{{mysql_vm_hostname}}:3306/candlepin\" --username=candlepin clearChecksums"
   args:
@@ -79,14 +84,6 @@
   shell: "liquibase --driver=com.mysql.jdbc.Driver --classpath=server/src/main/resources:server/target/classes/:/usr/share/java/mysql-connector-java.jar --changeLogFile=db/changelog/changelog-update.xml --url=\"jdbc:mysql://{{mysql_vm_hostname}}:3306/candlepin\" --username=candlepin update -Dcommunity=true"
   args:
     chdir: "{{candlepin_checkout}}"
-
-- name: Enable debugging
-  replace:
-    dest: /etc/candlepin/candlepin.conf
-    regexp: '#log4j.logger.org.candlepin=DEBUG'
-    replace: 'log4j.logger.org.candlepin=DEBUG'
-    backup: yes
-  become: true
 
 - name: pause for tomcat before restart
   pause:
