Add PR refspec so we can test the merged commit

--- a/ansible/roles/candlepin-user/tasks/main.yml
+++ b/ansible/roles/candlepin-user/tasks/main.yml
@@ -5,6 +5,7 @@
     dest: "{{candlepin_checkout}}"
     force: yes
     version: "{{candlepin_branch}}"
+    refspec: '+refs/pull/*:refs/heads/*'
   when: "{{candlepin_git_pull}}"
 
 - name: Checkout Caracalla
