--- a/ansible/roles/candlepin-user/tasks/main.yml
+++ b/ansible/roles/candlepin-user/tasks/main.yml
@@ -1,198 +1,11 @@
 ---
-- name: Checkout Candlepin
-  git:
-    repo: "{{candlepin_git_repo}}"
-    dest: "{{candlepin_checkout}}"
-    force: yes
-    version: "{{candlepin_branch}}"
-    refspec: '+refs/pull/*:refs/heads/*'
-  when: "{{candlepin_git_pull}}"
+- include: checkout.yml
 
-- name: Checkout Caracalla
-  git:
-    repo: "{{caracalla_git_repo}}"
-    dest: "{{caracalla_checkout}}"
-    force: yes
-    version: "{{caracalla_branch}}"
-  when: "{{candlepin_git_pull}}"
+- include: deploy.yml
+  when: deploy_candlepin
 
-- name: Run Bundle install
-  command: /usr/local/bin/bundle install
-  args:
-      chdir: "{{candlepin_checkout}}"
-  tags:
-    - skip_ansible_lint
+- include: liquibase.yml
+  when: provision_db
 
-- name: Add JAVA_HOME to bashrc
-  lineinfile:
-    dest: "{{candlepin_user_home}}/.bashrc"
-    line: "export JAVA_HOME=/usr/lib/jvm/java-1.8.0/"
-
-- name: Check for zshrc
-  stat:
-    path: "{{candlepin_user_home}}/.zshrc"
-  register: zshrc_file
-
-- name: Add JAVA_HOME to zshrc
-  lineinfile:
-    dest: "{{candlepin_user_home}}/.zshrc"
-    line: "export JAVA_HOME=/usr/lib/jvm/java-1.8.0/"
-  when: zshrc_file.stat.exists
-
-#The snapshot should have it cleared already. move this to the script used to setup vm later
-#- name: Clear liquibase checksum
-#  shell: "liquibase --driver=com.mysql.jdbc.Driver --classpath=server/src/main/resources:server/target/classes/:/usr/share/java/mysql-connector-java.jar --changeLogFile=db/changelog/changelog-update.xml --url=\"jdbc:mysql:///candlepin\" --username=candlepin clearChecksums"
-#  args:
-#    chdir: "{{candlepin_checkout}}"
-#  tags:
-#   - candlepin-user
-#   - candlepin-deploy
-
-- name: Update mysql vm post reset
-  shell: mysql -h {{mysql_vm_hostname}} -u candlepin candlepin < {{caracalla_checkout}}/ansible/resources/import.sql
-
-- name: Copy the custom.yaml
-  copy:
-    src: "resources/custom.yaml"
-    dest: "{{candlepin_checkout}}/server/custom.yaml"
-
-- name: Deploy the candlepin server
-  command: "./server/bin/deploy {{candlepin_deploy_args}}"
-  args:
-    chdir: "{{candlepin_checkout}}"
-  environment:
-    PATH: "{{ansible_env.PATH}}:{{candlepin_user_home}}/bin"
-    JAVA_HOME: "/usr/lib/jvm/java-1.8.0/"
-    TERM: "xterm-256color"
-  tags:
-    - candlepin-deploy
-    - skip_ansible_lint
-
-- name: Ensure candlepin talks to appropriate mysql
-  replace:
-    dest: /etc/candlepin/candlepin.conf
-    regexp: 'mysql://localhost/candlepin'
-    replace: 'mysql://{{mysql_vm_hostname}}:3306/candlepin'
-    backup: yes
-  become: true
-
-- name: Clear liquibase checksum
-  shell: "liquibase --driver=com.mysql.jdbc.Driver --classpath=server/src/main/resources:server/target/classes/:/usr/share/java/mysql-connector-java.jar --changeLogFile=db/changelog/changelog-update.xml --url=\"jdbc:mysql://{{mysql_vm_hostname}}:3306/candlepin\" --username=candlepin clearChecksums"
-  args:
-    chdir: "{{candlepin_checkout}}"
-
-- name: Update liquibase checksum
-  shell: "liquibase --driver=com.mysql.jdbc.Driver --classpath=server/src/main/resources:server/target/classes/:/usr/share/java/mysql-connector-java.jar --changeLogFile=db/changelog/changelog-update.xml --url=\"jdbc:mysql://{{mysql_vm_hostname}}:3306/candlepin\" --username=candlepin update -Dcommunity=true"
-  args:
-    chdir: "{{candlepin_checkout}}"
-
-- name: pause for tomcat before restart
-  pause:
-    minutes: 3
-
-- name: Restart tomcat
-  service:
-    name: tomcat
-    state: restarted
-  become: true
-
-- name: pause for tomcat to start
-  pause:
-    minutes: 3
-
-- name: Verify candlepin has started
-  get_url:
-    url: https://localhost:8443/candlepin/status
-    dest: /tmp/status_result.txt
-    validate_certs: no
-    timeout: 360
-
-- name: Write test properties to properties file
-  lineinfile: line={{item}} dest="{{candlepin_user_home}}/candlepin-throughput/candlepin-throughput.prop"
-  with_items: "{{candlepin_throughput_properties}}"
-
-- name: Remove results file if present
-  file:
-    path: "{{caracalla_checkout}}/{{item.value.result_file}}"
-    state: absent
-  with_dict: "{{jmeter_test_details}}"
-  when: "item.key in jmeter_tests"
-  tags:
-    - jmeter-step
-
-- name: Remove parsed results file if present
-  file:
-    path: "{{caracalla_checkout}}/parsed-{{item.value.result_file}}"
-    state: absent
-  with_dict: "{{jmeter_test_details}}"
-  when: "item.key in jmeter_tests"
-  tags:
-    - jmeter-step
-
-- name: Run jmeter test
-  command: /opt/apache-jmeter-3.0/bin/jmeter -n -t "{{caracalla_checkout}}"/{{item.value.folder}}/{{item.value.test_name}} -p "{{item.value.property_file}}"
-  with_dict: "{{jmeter_test_details}}"
-  when: "item.key in jmeter_tests"
-  args:
-    chdir: "{{caracalla_checkout}}"
-  tags:
-    - jmeter-step
-    - skip_ansible_lint
-
-- name: Parse result
-  command: "./parse-jtl.py --pretty-print {{item.value.result_file}} -o parsed-{{item.value.result_file}}"
-  args:
-    chdir: "{{caracalla_checkout}}"
-    creates: "{{caracalla_checkout}}/parsed-{{item.value.result_file}}"
-  with_dict: "{{jmeter_test_details}}"
-  when: "item.key in jmeter_tests"
-  tags:
-    - jmeter-step
-
-- name: Delete existing artifacts folder from workspace
-  local_action: file  dest="artifacts/" state=absent
-
-- name: Create artifacts folder
-  local_action: file  dest="artifacts/" state=directory
-
-- name: Fetch results files
-  fetch:
-    src: "{{caracalla_checkout}}/{{item.value.result_file}}"
-    dest: "artifacts/{{item.value.result_file}}"
-    flat: yes
-  with_dict: "{{jmeter_test_details}}"
-  when: "item.key in jmeter_tests"
-  tags:
-    - jmeter-step
-
-- name: Fetch parsed results files
-  fetch:
-    src: "{{caracalla_checkout}}/parsed-{{item.value.result_file}}"
-    dest: "artifacts/parsed-{{item.value.result_file}}"
-    flat: yes
-  with_dict: "{{jmeter_test_details}}"
-  when: "item.key in jmeter_tests"
-  tags:
-    - jmeter-step
-
-- name: Fetch candlepin.log
-  fetch:
-    src: "/var/log/candlepin/candlepin.log"
-    dest: "artifacts/candlepin.log"
-    flat: yes
-
-- name: Fetch access.log
-  fetch:
-    src: "/var/log/candlepin/access.log"
-    dest: "artifacts/access.log"
-    flat: yes
-
-- name: Evaluate result
-  command: "./parse-jtl.py -c {{item.value.result_file}} -b {{item.value.folder}}/{{item.value.baseline}} -e {{item.value.folder}}/{{item.value.expected}}"
-  with_dict: "{{jmeter_test_details}}"
-  when: "item.key in jmeter_tests"
-  args:
-    chdir: "{{caracalla_checkout}}"
-  tags:
-    - jmeter-step
-    - testme
+- include: test.yml
+  when: run_test
