Refactoring of code
* Replace optparse with argparse, because optparse is obsolete.
* Renamed baseline.dict to baseline.json
* Renamed expected.dict to expected.json
* Fixed formating in baseline.json
    * Json file format
    * Right indentation (2 spaces)
* Added .gitignore file

--- a/ansible/roles/candlepin-user/defaults/main.yml
+++ b/ansible/roles/candlepin-user/defaults/main.yml
@@ -26,8 +26,8 @@ jmeter_test_details:
   loop-over-apis:
     folder: Candlepin-API
     test_name: CandlepinAPI.jmx
-    baseline: baseline.dict
-    expected: expected.dict
+    baseline: baseline.json
+    expected: expected.json
     property_file: /home/jenkins/Candlepin-API/CandlepinAPI.prop
     result_file: results-CandlepinAPI.jtl
   ImportExport:
@@ -35,15 +35,15 @@ jmeter_test_details:
     test_name: ImportExportManifest.jmx
     property_file: /home/jenkins/ImportExportManifest.prop
     result_file: results-importexport.jtl
-    baseline: baseline.dict
-    expected: expected.dict
+    baseline: baseline.json
+    expected: expected.json
   candlepin-throughput:
     folder: candlepin-throughput
     test_name: candlepin-throughput.jmx
     property_file: /home/jenkins/candlepin-throughput/candlepin-throughput.prop
     result_file: results-throughput.jtl
-    baseline: baseline.dict
-    expected: expected.dict
+    baseline: baseline.json
+    expected: expected.json
 
 candlepin_throughput_properties:
  - DURATION_SECONDS=3600
