Imroved Python and Ansible scripts.
* Python script for parsing results (parse-jtl.py) exits
  always with zero value (except -h/--help).
* Ansible test script prints passing API calls in one play
  and then it prints not passing API calls in next play.
* Displaying of passin/not-passing API calls is more
  comprehensible. It has only one weak part and it is displying
  variables using debug module withing with_dict, because it
  displays too much information.
* Evaluating of results is done in separate play.
* Python script for estimation was renamed, because it can
  be used for esimation baseline.json file too. It can calculate
  average values from previous results and baseline file needn't
  be one of results. File baseline.json is also generated only
  with relevant informations (average, success_%)
* Script parse-jtl.py produce colored output, when it is run
  with -c argument. It can be disabled with argument -n. It
  is used at Jenkins, because it doesn't produce colored
  output in combination with Ansible.

--- a/ansible/roles/candlepin-user/defaults/main.yml
+++ b/ansible/roles/candlepin-user/defaults/main.yml
@@ -33,6 +33,7 @@ jmeter_test_details:
     expected: expected.json
     property_file: /home/jenkins/Candlepin-API/CandlepinAPI.prop
     result_file: results-CandlepinAPI.jtl
+    comparision_result: compare.txt
   ImportExport:
     folder: ImportExportManifest
     test_name: ImportExportManifest.jmx
@@ -40,6 +41,7 @@ jmeter_test_details:
     result_file: results-importexport.jtl
     baseline: baseline.json
     expected: expected.json
+    comparision_result: compare.txt
   candlepin-throughput:
     folder: candlepin-throughput
     test_name: candlepin-throughput.jmx
@@ -47,6 +49,7 @@ jmeter_test_details:
     result_file: results-throughput.jtl
     baseline: baseline.json
     expected: expected.json
+    comparision_result: compare.txt
 
 candlepin_throughput_properties:
  - DURATION_SECONDS=3600
