--- a/ansible/roles/candlepin-user/tasks/test.yml
+++ b/ansible/roles/candlepin-user/tasks/test.yml
@@ -144,6 +144,7 @@
 
 - name: Check for failed tests
   shell: '! grep "\[FAILED\]" {{item.value.folder}}/{{item.value.comparision_result}}'
+  with_dict: "{{jmeter_test_details}}"
   when: "item.key in jmeter_tests"
   args:
     chdir: "{{caracalla_checkout}}"
