--- a/ansible/roles/candlepin-user/tasks/deploy.yml
+++ b/ansible/roles/candlepin-user/tasks/deploy.yml
@@ -45,7 +45,7 @@
 - name: Ensure candlepin talks to appropriate mysql
   replace:
     dest: /etc/candlepin/candlepin.conf
-    regexp: 'mysql:///candlepin'
+    regexp: 'mysql://candlepin/localhost'
     replace: 'mysql://{{mysql_vm_hostname}}:3306/candlepin'
     backup: yes
   become: true
