--- a/ansible/roles/candlepin-user/tasks/test.yml
+++ b/ansible/roles/candlepin-user/tasks/test.yml
@@ -102,7 +102,7 @@
     dest: "artifacts/access.log"
     flat: yes
 
-- name: Compare result
+- name: Compare results
   command: "./parse-jtl.py -c {{item.value.result_file}} -b {{item.value.folder}}/{{item.value.baseline}} -e {{item.value.folder}}/{{item.value.expected}} -n -o {{item.value.folder}}/{{item.value.comparision_result}}"
   with_dict: "{{jmeter_test_details}}"
   when: "item.key in jmeter_tests"
@@ -143,7 +143,7 @@
   with_items: "{{failed_tests_dict.results}}"
 
 - name: Check for failed tests
-  shell: '! grep "\[FAILED\]" {{item.value.folder}}/{{item.value.comparision_result}}'
+  shell: '! grep "\[FAILED\]" {{item.value.folder}}/{{item.value.comparision_result}} > /dev/null'
   with_dict: "{{jmeter_test_details}}"
   when: "item.key in jmeter_tests"
   args:
