--- a/ansible/roles/candlepin-user/tasks/test.yml
+++ b/ansible/roles/candlepin-user/tasks/test.yml
@@ -112,7 +112,7 @@
     - jmeter-step
     - testme
 
-- name: Show passed tests
+- name: Grep passed tests
   shell: 'grep "\[OK\]" {{item.value.folder}}/{{item.value.comparision_result}} || true'
   register: passed_tests_dict
   with_dict: "{{jmeter_test_details}}"
@@ -122,12 +122,16 @@
   tags:
     - jmeter-step
 
-- debug:
-    msg: "{{item.stdout_lines}}"
-  when: item.changed == true
-  with_items: "{{passed_tests_dict.results}}"
+- name: Set variable with passed tests
+  set_fact: failed_tests="{{item.stdout_lines}}"
+  when: "item.key in jmeter_tests"
+  with_dict: "{{passed_tests_dict.results}}"
 
-- name: Show failed tests
+- name: Show passed tests
+  debug:
+    msg: "{{passed_tests}}"
+
+- name: Grep failed tests from results
   shell: 'grep "\[FAILED\]" {{item.value.folder}}/{{item.value.comparision_result}} || true'
   register: failed_tests_dict
   with_dict: "{{jmeter_test_details}}"
@@ -137,10 +141,14 @@
   tags:
     - jmeter-step
 
-- debug:
-    msg: "{{item.stdout_lines}}"
-  when: item.changed == true
-  with_items: "{{failed_tests_dict.results}}"
+- name: Set variable with failed tests
+  set_fact: failed_tests="{{item.stdout_lines}}"
+  when: "item.key in jmeter_tests"
+  with_dict: "{{failed_tests_dict.results}}"
+
+- name: Show failed tests
+  debug:
+    msg: "{{failed_tests}}"
 
 - name: Check for failed tests
   shell: '! grep "\[FAILED\]" {{item.value.folder}}/{{item.value.comparision_result}} > /dev/null'
