Changes in Python and Ansible scripts
* File compare.txt is copied to artifacts folder
* Better formating of results
* Some comments in param_estimator.py and added x flag for this
  file. It is possible to execute it with ./param_estimator.py.

--- a/ansible/roles/candlepin-user/tasks/test.yml
+++ b/ansible/roles/candlepin-user/tasks/test.yml
@@ -112,6 +112,14 @@
     - jmeter-step
     - testme
 
+- name: Fetch compare.txt
+  fetch:
+    src: "{{item.value.folder}}/{{item.value.comparision_result}}"
+    dest: "artifacts/{{item.value.folder}}-{{item.value.comparision_result}}"
+    flat: yes
+  with_dict: "{{jmeter_test_details}}"
+  when: "item.key in jmeter_tests"
+
 - name: Grep passed tests
   shell: 'grep "\[OK\]" {{item.value.folder}}/{{item.value.comparision_result}} || true'
   register: passed_tests_dict
