--- a/ansible/roles/hypervisor/tasks/main.yml
+++ b/ansible/roles/hypervisor/tasks/main.yml
@@ -11,12 +11,16 @@
 
 - name: Reset snapshot on performance vm (readyfortestsnap snapshot)
   command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='readyfortestsnap' --running
-  when: ("{{perf_vm_domain}}" == "CP") or ("{{perf_vm_domain}}" == "candlepin-perf-mysql" and "{{database_snapshot}}" == "master")
+  when:
+    - perf_vm_domain == "CP" or perf_vm_domain == "candlepin-perf-mysql"
+    - database_snapshot == "master"
   tags:
     - skip_ansible_lint
 
 - name: Reset snapshot on performance vm (candlepin-2.0-HOTFIX snapshot)
   command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='candlepin_20_hotfix' --running
-  when: ("{{perf_vm_domain}}" == "candlepin-perf-mysql" and "{{database_snapshot}}" == "candlepin-2.0-HOTFIX")
+  when:
+    - perf_vm_domain == "candlepin-perf-mysql"
+    - database_snapshot == "candlepin-2.0-HOTFIX"
   tags:
     - skip_ansible_lint
