--- a/ansible/roles/hypervisor/tasks/main.yml
+++ b/ansible/roles/hypervisor/tasks/main.yml
@@ -12,8 +12,7 @@
 - name: Reset snapshot on performance vm (readyfortestsnap snapshot)
   command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='readyfortestsnap' --running
   when:
-    - perf_vm_domain == "CP" or perf_vm_domain == "candlepin-perf-mysql"
-    - database_snapshot == "master"
+    - perf_vm_domain == "CP" or (perf_vm_domain == "candlepin-perf-mysql" and database_snapshot == "master")
   tags:
     - skip_ansible_lint
 
