Concatenate results from all tests. Do not show results only of last one.

--- a/ansible/roles/candlepin-user/tasks/test.yml
+++ b/ansible/roles/candlepin-user/tasks/test.yml
@@ -120,6 +120,11 @@
   with_dict: "{{jmeter_test_details}}"
   when: "item.key in jmeter_tests"
 
+- name: Initialize variables
+  set_fact:
+    passed_tests: []
+    failed_tests: []
+
 - name: Grep passed tests
   shell: 'grep "\[OK\]" {{item.value.folder}}/{{item.value.comparision_result}} || true'
   register: passed_tests_dict
@@ -131,7 +136,7 @@
     - jmeter-step
 
 - name: Set variable with passed tests
-  set_fact: passed_tests="{{item.stdout_lines}}"
+  set_fact: passed_tests="{{passed_tests}} + {{item.stdout_lines}}"
   when: item.changed == true
   with_items: "{{passed_tests_dict.results}}"
 
@@ -146,7 +151,7 @@
     - jmeter-step
 
 - name: Set variable with failed tests
-  set_fact: failed_tests="{{item.stdout_lines}}"
+  set_fact: failed_tests="{{failed_tests}} + {{item.stdout_lines}}"
   when: item.changed == true
   with_items: "{{failed_tests_dict.results}}"
 
