Better name of variable.

--- a/ansible/roles/hypervisor/defaults/main.yml
+++ b/ansible/roles/hypervisor/defaults/main.yml
@@ -1,2 +1,2 @@
-database_snapshot: 'master'
-# database_snapshot: 'candlepin-2.0-HOTFIX'
+target_branch: 'master'
+# target_branch: 'candlepin-2.0-HOTFIX'
