--- a/ansible/roles/hypervisor/tasks/main.yml
+++ b/ansible/roles/hypervisor/tasks/main.yml
@@ -12,7 +12,7 @@
 - name: Reset snapshot on performance vm (readyfortestsnap snapshot)
   command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='readyfortestsnap' --running
   when:
-    - perf_vm_domain == "CP" or (perf_vm_domain == "candlepin-perf-mysql" and database_snapshot == "master")
+    - perf_vm_domain == "CP" or (perf_vm_domain == "candlepin-perf-mysql" and target_branch == "master")
   tags:
     - skip_ansible_lint
 
@@ -20,6 +20,6 @@
   command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='candlepin_20_hotfix' --running
   when:
     - perf_vm_domain == "candlepin-perf-mysql"
-    - database_snapshot == "candlepin-2.0-HOTFIX"
+    - target_branch == "candlepin-2.0-HOTFIX"
   tags:
     - skip_ansible_lint
