Delete candlepin checkout if it exists

--- a/ansible/roles/candlepin-user/tasks/checkout.yml
+++ b/ansible/roles/candlepin-user/tasks/checkout.yml
@@ -1,4 +1,10 @@
 ---
+- name: Clean Candlepin Checkout
+  file:
+      state: absent
+      path: "{{candlepin_checkout}}"
+  when: candlepin_git_pull == True
+
 - name: Checkout Candlepin
   git:
     repo: "{{candlepin_git_repo}}"
