--- a/ansible/roles/hypervisor/tasks/main.yml
+++ b/ansible/roles/hypervisor/tasks/main.yml
@@ -10,7 +10,7 @@
     state=stopped
 
 - name: Reset snapshot on performance vm (readyfortestsnap snapshot)
-  command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='readyfortestsnap_csnyder' --running
+  command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='readyfortestsnap' --running
   when:
     - perf_vm_domain == "CP" or (perf_vm_domain == "candlepin-perf-mysql" and target_branch == "master")
   tags:
