--- a/ansible/roles/hypervisor/tasks/main.yml
+++ b/ansible/roles/hypervisor/tasks/main.yml
@@ -12,14 +12,14 @@
 - name: Reset snapshot on performance vm (readyfortestsnap snapshot)
   command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='readyfortestsnap' --running
   when:
-    - perf_vm_domain == "CP" or (perf_vm_domain == "candlepin-perf-mysql" and target_branch == "master")
+    - perf_vm_domain == "CP-performance" or (perf_vm_domain == "candlepin-perf" and target_branch == "master")
   tags:
     - skip_ansible_lint
 
 - name: Reset snapshot on performance vm (candlepin-2.0-HOTFIX snapshot)
   command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='candlepin_20_hotfix' --running
   when:
-    - perf_vm_domain == "candlepin-perf-mysql"
+    - perf_vm_domain == "candlepin-perf"
     - target_branch == "candlepin-2.0-HOTFIX"
   tags:
     - skip_ansible_lint
