ConsumerResource debug logging

--- a/ansible/resources/custom.yaml
+++ b/ansible/resources/custom.yaml
@@ -1,5 +1,8 @@
 candlepin.conf:
+  pinsetter_enabled: "true"
+  custom_logging:
+    "org.candlepin.resource.ConsumerResource": "DEBUG"
+
   additional_properties: |
     candlepin.pinsetter.enable=false
     pinsetter.default_tasks=
-    #log4j.logger.org.candlepin=DEBUG
