--- a/ansible/roles/candlepin-user/defaults/main.yml
+++ b/ansible/roles/candlepin-user/defaults/main.yml
@@ -55,3 +55,6 @@ jmeter_test_details:
 candlepin_throughput_properties:
  - DURATION_SECONDS=3600
  - SAMPLES_PER_MINUTE=6900
+
+loop_over_apis_properties:
+ - SCALE=1000
