--- a/ansible/roles/hypervisor/tasks/main.yml
+++ b/ansible/roles/hypervisor/tasks/main.yml
@@ -13,3 +13,13 @@
   command: virsh snapshot-revert --domain {{perf_vm_domain}} --snapshotname='{{perf_vm_domain | snap_name(baseline_branch, target_branch)}}' --running
   tags:
     - skip_ansible_lint
+
+- name: Wait for vms to restart
+  delegate_to: localhost
+  wait_for:
+    port=22
+    host={{perf_vm_hostname}}
+    search_regex=OpenSSH
+    delay=10
+    timeout=600
+    state=started
