Maintenance job for performance tests
Changes to performance tests
* Run param_estimator.py and for baseline.json and expected.json
* Copy sucessful results to NFS share at host

New maintenace job for perf tests
* This job should be started manually
* New version of baseline.json and expected.json is computed
  from all sucessful results
* Commit changes to feature branch
* Create pull request from feature branch

--- a/ansible/roles/candlepin-user/defaults/main.yml
+++ b/ansible/roles/candlepin-user/defaults/main.yml
@@ -20,6 +20,8 @@ caracalla_git_repo: https://github.com/candlepin/caracalla.git
 caracalla_checkout: /home/jenkins/caracalla
 caracalla_branch: master
 
+perf_results_dir: /home/jenkins/perf_test_results
+
 # The test to run, other tests defined in jmeter_test_details
 # will be skipped
 jmeter_tests:
